Create server with mysql

--- a/app/package.json
+++ b/app/package.json
@@ -14,8 +14,10 @@
   "keywords": [],
   "license": "MIT",
   "dependencies": {
+    "dotenv": "^16.0.0",
     "ejs": "^3.1.6",
-    "express": "^4.17.2"
+    "express": "^4.17.2",
+    "mysql": "^2.18.1"
   },
   "homepage": "",
   "repository": {
