--- a/app/package.json
+++ b/app/package.json
@@ -14,10 +14,13 @@
   "keywords": [],
   "license": "MIT",
   "dependencies": {
+    "app-root-path": "^3.0.0",
     "dotenv": "^16.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.2",
-    "mysql": "^2.18.1"
+    "morgan": "^1.10.0",
+    "mysql": "^2.18.1",
+    "winston": "^3.6.0"
   },
   "homepage": "",
   "repository": {
